# smart-forward

./:  .gitignore  .cursorrules  .dockerignore  .gitignore  BUILD-GUIDE.md  CONFIGURATION.md  Cargo.toml  Dockerfile  Dockerfile.alpine  Dockerfile.simple  Dockerfile.test  Dockerfile.tiny  EXAMPLES.md  FINAL-GUIDE.md  FINAL_PROJECT_STATUS.md  GITHUB-ACTIONS-GUIDE.md  GITHUB-SETUP.md  INSTALLATION.md  LICENSE  MULTI_PROTOCOL_FEATURES.md  MUSL_VS_GNU.md  OPENWRT_DEPLOY.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_RULES.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  QUICK_FIX_GUIDE.md  RDP_MULTI_PROTOCOL_OPTIMIZATION.md  README.md  TECHNICAL-DOCS.md  TROUBLESHOOTING.md  UDP-HEALTH-CHECK.md  UDP_FEATURES.md  WIKI.md  build-cross-platform.ps1  build-cross-platform.sh  build-docker.sh  build-release.ps1  build-windows.ps1  build.ps1  (+41 more)
.github/workflows/: build.yml  ci-final.yml  ci.yml  docker-build.yml  docker.yml  release-v1.0.0.yml  release.yml  tag-release.yml
deploy/: README.md  config.yaml  run.ps1
deploy-enhanced/: README.md  config.yaml  run.bat
docker/: Dockerfile  Dockerfile.alpine  Dockerfile.prebuilt  docker-compose.kernel.yml  docker-compose.yml  docker-config.yaml
docs/: DEPLOYMENT.md  INSTALLATION.md  README.md  build-troubleshooting.md  configuration.md  deployment.md  docker-comparison.md  docker-size-comparison.md  docker.md  examples.md  github-permissions-guide.md  github-setup-guide.md  linux-installation.md  openwrt-installation.md  performance.md  security.md
openwrt-package/: install.sh  smart-forward
scripts/: build.ps1  check-docker-build-permissions.ps1  diagnose-ghcr.ps1  docker-build.ps1  fix-ghcr-permissions.md  fix-ghcr-permissions.ps1  linux-install.sh  openwrt-install.sh  openwrt-service.sh  package.ps1  setup-github-permissions.sh
src/: common.rs  config.rs  firewall.rs  forwarder.rs  main.rs  mod.rs  stats.rs  utils.rs
src/forwarder/: http.rs  mod.rs  tcp.rs  udp.rs  unified.rs
