[package]
name = "smart-forward"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "net", "time", "macros", "sync", "signal", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"
async-trait = "0.1"
dashmap = "5.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
trust-dns-resolver = { version = "0.23", features = ["system-config", "tokio-runtime"], default-features = false }
local-ip-address = "0.6"