[package]
name = "smart-forward"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "智能网络转发器 - 支持TCP、UDP、HTTP协议的高性能转发工具"
license = "MIT"
repository = "https://github.com/your-username/smart-forward"
homepage = "https://github.com/your-username/smart-forward"
keywords = ["proxy", "forward", "tcp", "udp", "http", "network"]
categories = ["network-programming", "command-line-utilities"]
readme = "README.md"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "net", "time", "macros", "sync", "signal", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"
async-trait = "0.1"
dashmap = "5.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
trust-dns-resolver = { version = "0.23", features = ["system-config", "tokio-runtime"], default-features = false }
serde_json = "1.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"

[[bin]]
name = "smart-forward"
path = "src/main.rs"

[profile.release]
# 优化设置
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
# 开发模式优化
opt-level = 1
debug = true