[package]
name = "smart-forward"
version = "1.5.2"
edition = "2021"
authors = ["cls3389 <cls3389@example.com>"]
description = "智能网络转发器 - 支持TCP、UDP、HTTP协议的高性能转发工具"
license = "MIT"
repository = "https://github.com/cls3389/smart-forward"
homepage = "https://github.com/cls3389/smart-forward"
keywords = ["proxy", "forward", "tcp", "udp", "http", "network"]
categories = ["network-programming", "command-line-utilities"]
readme = "README.md"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "net", "time", "macros", "sync", "signal", "io-util"] }
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "2.0"
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"
async-trait = "0.1"
dashmap = "5.0"
chrono = { version = "0.4", features = ["serde", "clock"] }
hickory-resolver = { version = "0.24", features = ["system-config", "tokio-runtime"], default-features = false }
serde_json = "1.0"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"

[[bin]]
name = "smart-forward"
path = "src/main.rs"

[profile.release]
# 极致优化设置 - 体积优先
opt-level = "z"      # 优化体积而非速度
lto = "fat"          # 全链接时优化
codegen-units = 1    # 单个代码生成单元
panic = "abort"      # 减少panic处理代码
strip = true         # 移除调试符号

[profile.dev]
# 开发模式优化
opt-level = 1
debug = true